tests/bad/pointer_arithmetic.glaz
fn main() {
	let x = 5;
	let p: *i32 = &x;
	_ = p + p;
	_ = p * p;
	_ = p * 2;
	_ = p + 5;
	_ = p - p;
}
